IF(PAL_CONFIG_HAS_BEEN_RUN_BEFORE)

	SET(EXE_NAME test_drop)

	ADD_EXECUTABLE(
		${EXE_NAME}
		"droptest.cpp"
	)

	ADD_DEPENDENCY_ALL_ENGINES(${EXE_NAME})

	#IF(PAL_STATIC)
		ADD_TARGET_PROPERTIES(${EXE_NAME} COMPILE_DEFINITIONS NOMINMAX)		# Used for Novodex/PhysX
	#ENDIF()

	INCLUDE_DIRECTORIES(${HEADERS_BASE_PATH})
	TARGET_LINK_LIBRARIES( ${EXE_NAME} libpal libtest ${MATH_LIBRARY} ${DL_LIBRARY} )
	LINK_WITH_VARIABLES( ${EXE_NAME} SDL OPENGL IRRLICHT )
	ADD_INTERNAL_DEBUG_DEFINITIONS(${EXE_NAME})
	IF(PAL_STATIC)
		LINK_WITH_VARIABLES_ALL_ENGINES(${EXE_NAME})
	ENDIF()

	# Add the postfix to the executable since it is not added automatically as for modules and shared libraries
	SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES DEBUG_POSTFIX "${CMAKE_DEBUG_POSTFIX}")

	IF(APPLE)
		#ADD_SUBDIRECTORY(MacOSX)
	ENDIF()

	IF(MSVC)
		IF(NOT BUILD_OUTPUT_DIR_RELEASE_DEBUG)
			# Ugly workaround to remove the "/debug" or "/release" in each output
			SET_TARGET_PROPERTIES(${EXE_NAME} PROPERTIES PREFIX "../")
		ENDIF()
	ENDIF()
	
ENDIF()
